update project users
