# docs/swagger.json
@@ -221,60 +221,7 @@
                 }
             }
         },
-        "/user": {
-            "get": {
-                "description": "AuthenticatedUser",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "User",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/res.SuccessWithDataResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/res.UserResponse"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/res.ErrorResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "error": {
-                                            "$ref": "#/definitions/errs.ForbiddenError"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/user/project": {
+        "/project": {
             "post": {
                 "description": "Create Project",
                 "consumes": [
@@ -284,7 +231,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "project"
                 ],
                 "summary": "Create Project",
                 "parameters": [
@@ -374,7 +321,149 @@
                 }
             }
         },
-        "/user/projects": {
+        "/project/user": {
+            "get": {
+                "description": "Project user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "project"
+                ],
+                "summary": "Project user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.SuccessWithDataResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/res.ProjectUserResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.ErrorResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/errs.BadRequestError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.ErrorResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/errs.ForbiddenError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/project/users": {
+            "get": {
+                "description": "Project users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "project"
+                ],
+                "summary": "Project users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.SuccessWithDataResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/res.ProjectUsersResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.ErrorResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/errs.BadRequestError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.ErrorResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/errs.ForbiddenError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/projects": {
             "get": {
                 "description": "UserProjects",
                 "consumes": [
@@ -384,7 +473,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "project"
                 ],
                 "summary": "Projects",
                 "responses": {
@@ -444,6 +533,59 @@
                     }
                 }
             }
+        },
+        "/user": {
+            "get": {
+                "description": "AuthenticatedUser",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "User",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.SuccessWithDataResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/res.UserResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.ErrorResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/errs.ForbiddenError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -456,7 +598,7 @@
                 },
                 "message": {
                     "type": "string",
-                    "example": "User already exists."
+                    "example": "Already exists."
                 },
                 "status": {
                     "type": "integer",
@@ -602,6 +744,33 @@
                 }
             }
         },
+        "project_dto.ProjectUserDto": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "project": {
+                    "$ref": "#/definitions/project_dto.ProjectDto"
+                },
+                "project_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "role_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "user": {
+                    "$ref": "#/definitions/user_dto.UserDto"
+                },
+                "user_id": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
         "req.CreateProjectRequest": {
             "type": "object",
             "required": [
@@ -673,6 +842,44 @@
                 }
             }
         },
+        "res.ProjectResponse": {
+            "type": "object",
+            "properties": {
+                "project": {
+                    "$ref": "#/definitions/project_dto.ProjectDto"
+                }
+            }
+        },
+        "res.ProjectUserResponse": {
+            "type": "object",
+            "properties": {
+                "projectUser": {
+                    "$ref": "#/definitions/project_dto.ProjectUserDto"
+                }
+            }
+        },
+        "res.ProjectUsersResponse": {
+            "type": "object",
+            "properties": {
+                "projectUsers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/project_dto.ProjectUserDto"
+                    }
+                }
+            }
+        },
+        "res.ProjectsResponse": {
+            "type": "object",
+            "properties": {
+                "projects": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/project_dto.ProjectDto"
+                    }
+                }
+            }
+        },
         "res.SuccessResponse": {
             "type": "object",
             "properties": {
@@ -692,26 +899,24 @@
                 }
             }
         },
-        "res.ProjectResponse": {
-            "type": "object",
-            "properties": {
-                "project": {
-                    "$ref": "#/definitions/project_dto.ProjectDto"
-                }
-            }
-        },
-        "res.ProjectsResponse": {
-            "type": "object",
-            "properties": {
-                "projects": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/project_dto.ProjectDto"
-                    }
-                }
-            }
-        },
         "res.UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "john@john.com"
+                },
+                "fullName": {
+                    "type": "string",
+                    "example": "John"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "user_dto.UserDto": {
             "type": "object",
             "properties": {
                 "email": {
